@@ -1347,6 +1347,8 @@ typedef void GLvoid;
 #define GL_SECONDARY_COLOR_ARRAY_POINTER 0x845D
 #define GL_SECONDARY_COLOR_ARRAY 0x845E
 #define GL_MAX_TEXTURE_LOD_BIAS 0x84FD
+#define GL_TEXTURE_MAX_ANISOTROPY_EXT 0x84FE
+#define GL_MAX_TEXTURE_MAX_ANISOTROPY_EXT 0x84FF
 #define GL_TEXTURE_FILTER_CONTROL 0x8500
 #define GL_TEXTURE_LOD_BIAS 0x8501
 #define GL_INCR_WRAP 0x8507
