@@ -26,4 +26,8 @@ struct OpenGLBinding;
 void QGL_sharedContextCreated(OpenGLBinding& table);
 void QGL_sharedContextDestroyed(OpenGLBinding& table);
 
+bool QGL_ExtensionSupported(const char* extension);
+
+float QGL_maxTextureAnisotropy();
+
 #endif
