@@ -34,6 +34,7 @@
     <file name="patch_weld.bmp"/>
     <file name="patch_wireframe.bmp"/>
     <file name="popup_selection.bmp"/>
+    <file name="refresh_models.bmp"/>
     <file name="scalelockx.bmp"/>
     <file name="scalelocky.bmp"/>
     <file name="scalelockz.bmp"/>
